--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,6 +1,75 @@
 {% extends "base.html" %}
 
 {% block content %}
+<style>
+.show {display:block;}
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: #f1f1f1;
+    min-width: 160px;
+    overflow: auto;
+    box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+    z-index: 1;
+}
+
+.dropdown-content a {
+    color: black;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+}
+</style>
     <h1>This is the inventory page</h1>
      <a href="{{ url_for('logout.logout') }}">Logout</a>
+     <table style="width:100%">
+         <tr>
+             <th>SKU</th>
+             <th>Name</th>
+             <th>Category</th>
+             <th>Reorder Point</th>
+             <th>Quantity</th>
+             <th>Options</th>
+         </tr>
+         {% for product in inventory %}
+            <tr>
+                <td>{{product[0]}}</td>
+                <td>{{product[1]}}</td>
+                <td>{{product[2]}}</td>
+                <td>{{product[3]}}</td>
+                <td>{{product[4]}}</td>
+                <td><div class="dropdown">
+                  <button onclick="edit_product()" class="dropbtn">Dropdown</button>
+                  <div id="myDropdown" class="dropdown-content">
+                    <a href="#edit">Edit</a>
+                    <a href="#delete">Delete</a>
+                  </div>
+              </div></td>
+            </tr>
+       {% endfor %}}
+
+     </table>
+
+     <script>
+     /* When the user clicks on the button,
+     toggle between hiding and showing the dropdown content */
+     function edit_product() {
+         document.getElementById("myDropdown").classList.toggle("show");
+     }
+
+     // Close the dropdown if the user clicks outside of it
+     window.onclick = function(event) {
+       if (!event.target.matches('.dropbtn')) {
+
+         var dropdowns = document.getElementsByClassName("dropdown-content");
+         var i;
+         for (i = 0; i < dropdowns.length; i++) {
+           var openDropdown = dropdowns[i];
+           if (openDropdown.classList.contains('show')) {
+             openDropdown.classList.remove('show');
+           }
+         }
+       }
+     }
+     </script>
 {% endblock %}
