--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -4,5 +4,5 @@
     <h1>This is the dashboard</h1>
     <a href="{{ url_for('inventory.inventory') }}">Inventory</a>
     <a href="{{ url_for('sales.sales') }}">Sales Orders</a>
-    <a href="{{ url_for('logout.logout') }}">Logout</a>
+    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
 {% endblock %}
