--- a/templates/sales.html
+++ b/templates/sales.html
@@ -2,5 +2,5 @@
 
 {% block content %}
     <h1>This is the sales page</h1>
-     <a href="{{ url_for('logout.logout') }}">Logout</a>
+     <a href="{{ url_for('user_auth.logout') }}">Logout</a>
 {% endblock %}
