--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -7,37 +7,40 @@
     <h1>This is the inventory page</h1>
     <a href="{{ url_for('user_auth.logout') }}">Logout</a>
      <table style="width:100%" class="table">
-         <tr>
-             <th scope="col">SKU</th>
-             <th scope="col">Name</th>
-             <th scope="col">Category</th>
-             <th scope="col">Reorder Point</th>
-             <th scope="col">Quantity</th>
-             <th scope="col">Options</th>
-         </tr>
-         {% for product in inventory %}
+         <thead>
             <tr>
-                <td>{{product[0]}}</td>
-                <td>{{product[1]}}</td>
-                <td>{{product[2]}}</td>
-                <td>{{product[3]}}</td>
-                <td>{{product[4]}}</td>
-                <td>
-                  <div class="btn-group">
-                    <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                      Action
-                    </button>
-                    <div class="dropdown-menu">
-                      <a class="dropdown-item" href="#">Reorder</a>
-                      <div class="dropdown-divider"></div>
-                      <a class="dropdown-item" href="#">Edit</a>
-                      <a class="dropdown-item btn btn-danger" href="#">Delete</a>
-                    </div>
-                  </div>
-                </td>
+                <th scope="col">SKU</th>
+                <th scope="col">Name</th>
+                <th scope="col">Category</th>
+                <th scope="col">Reorder Point</th>
+                <th scope="col">Quantity</th>
+                <th scope="col">Options</th>
             </tr>
+         </thead>
+         {% for product in inventory %}
+            <tbody>
+                <tr>
+                    <td>{{product[0]}}</td>
+                    <td>{{product[1]}}</td>
+                    <td>{{product[2]}}</td>
+                    <td>{{product[3]}}</td>
+                    <td>{{product[4]}}</td>
+                    <td>
+                      <div class="btn-group">
+                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                          Action
+                        </button>
+                        <div class="dropdown-menu">
+                          <a class="dropdown-item" href="#">Reorder</a>
+                          <div class="dropdown-divider"></div>
+                          <a class="dropdown-item" href="#">Edit</a>
+                          <a class="dropdown-item btn btn-danger" href="#">Delete</a>
+                        </div>
+                      </div>
+                    </td>
+                </tr>
+            </tbody>
        {% endfor %}
-
      </table>
      
 {% endblock %}
