--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -4,9 +4,11 @@
 <style>
 
 </style>
-    <h1>This is the inventory page</h1>
-    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-     <table style="width:100%" class="table">
+<h1>This is the inventory page</h1>
+<a href="{{ url_for('user_auth.logout') }}">Logout</a>
+
+<div class="container">
+  <table style="width:100%" class="table">
          <thead>
             <tr>
                 <th scope="col">SKU</th>
@@ -43,6 +45,7 @@
                 </tr>
             </tbody>
        {% endfor %}
-     </table>
+  </table>
+</div>
 
 {% endblock %}
