--- a/templates/dashboard.html
+++ b/templates/dashboard.html
@@ -2,7 +2,46 @@
 
 {% block content %}
     <h1>This is the dashboard</h1>
+  <!--  <a href="{{ url_for('dashboard.dashboard') }}">Dashboard</a>
     <a href="{{ url_for('inventory.inventory') }}">Inventory</a>
     <a href="{{ url_for('sales.sales') }}">Sales Orders</a>
-    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
+    <a href="{{ url_for('user_auth.logout') }}">Sign out</a> -->
+
+    <nav class="navbar navbar-dark fixed-top bg-dark flex-md-nowrap p-0 shadow">
+      <a class="navbar-brand col-sm-3 col-md-2 mr-0" href="#">PyMarket</a>
+
+      <ul class="navbar-nav px-3">
+        <li class="nav-item text-nowrap">
+          <a class="nav-link" href="{{ url_for('user_auth.logout') }}">Sign out</a>
+        </li>
+      </ul>
+    </nav>
+
+    <div class="container-fluid">
+      <div class="row">
+        <nav class="col-md-2 d-none d-md-block bg-light sidebar">
+          <div class="sidebar-sticky">
+            <ul class="nav flex-column">
+              <li class="nav-item">
+                <a class="nav-link active" href="#">
+                  <span data-feather="home"></span>
+                  Dashboard <span class="sr-only">(current)</span>
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('sales.sales') }}">
+                  <span data-feather="file"></span>
+                  Sales Orders
+                </a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="{{ url_for('inventory.inventory') }}">
+                  <span data-feather="shopping-cart"></span>
+                  Inventory
+                </a>
+              </li>
+            </ul>
+            </ul>
+          </div>
+        </nav>
 {% endblock %}
