--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -4,45 +4,86 @@
 <style>
 
 </style>
-    <h1>This is the inventory page</h1>
-    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-     <table style="width:100%" class="table">
-         <thead>
-            <tr>
-                <th scope="col">SKU</th>
-                <th scope="col">Name</th>
-                <th scope="col">Reorder Point</th>
-                <th scope="col">Quantity</th>
-                <th scope="col">Options</th>
-            </tr>
-         </thead>
-         {% for product in inventory %}
-            <tbody>
-                <tr>
-                    <!--SKU-->
-                    <td>{{product[0]}}</td>
-                    <!--Name-->
-                    <td>{{product[1]}}</td>
-                    <!--Reorder Point-->
-                    <td>{{product[2]}}</td>
-                    <!--Quantity-->
-                    <td>{{product[3]}}</td>
-                    <td>
-                      <div class="btn-group">
-                        <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                          Action
-                        </button>
-                        <div class="dropdown-menu">
-                          <a class="dropdown-item" href="#">Reorder</a>
-                          <div class="dropdown-divider"></div>
-                          <a class="dropdown-item" href="#">Edit</a>
-                          <a class="dropdown-item btn btn-danger" href="#">Delete</a>
-                        </div>
-                      </div>
-                    </td>
-                </tr>
-            </tbody>
-       {% endfor %}
-     </table>
+<h1>This is the inventory page</h1>
+<a href="{{ url_for('user_auth.logout') }}">Logout</a>
+<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@Add">
+  Add
+</button>
+<div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="addModal">Add new product</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        <form>
+          <div class="form-row align-items-center">
+            <div class="col-auto">
+              <label class="sr-only" for="inlineFormInput">SKU</label>
+              <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="SKU">
+            </div>
+            <div class="col-auto">
+              <label class="sr-only" for="inlineFormInput">Name</label>
+              <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Product Name">
+            </div>
+            <div class="col-auto">
+              <label class="sr-only" for="inlineFormInput">Reorder Point</label>
+              <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="200">
+            </div>
+            <div class="col-auto">
+              <label class="sr-only" for="inlineFormInput">Quantity</label>
+              <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="500">
+            </div>
+          </div>
+        </form>
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+        <button type="button" class="btn btn-primary">Submit</button>
+      </div>
+    </div>
+  </div>
+</div>
+<table style="width:100%" class="table">
+  <thead>
+    <tr>
+      <th scope="col">SKU</th>
+      <th scope="col">Name</th>
+      <th scope="col">Reorder Point</th>
+      <th scope="col">Quantity</th>
+      <th scope="col">Options</th>
+    </tr>
+  </thead>
+  {% for product in inventory %}
+  <tbody>
+    <tr>
+      <!--SKU-->
+      <td>{{product[0]}}</td>
+      <!--Name-->
+      <td>{{product[1]}}</td>
+      <!--Reorder Point-->
+      <td>{{product[2]}}</td>
+      <!--Quantity-->
+      <td>{{product[3]}}</td>
+      <td>
+        <div class="btn-group">
+          <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            Action
+          </button>
+          <div class="dropdown-menu">
+            <a class="dropdown-item" href="#">Reorder</a>
+            <div class="dropdown-divider"></div>
+            <a class="dropdown-item" href="#">Edit</a>
+            <a class="dropdown-item btn btn-danger" href="#">Delete</a>
+          </div>
+        </div>
+      </td>
+    </tr>
+  </tbody>
+  {% endfor %}
+</table>
 
 {% endblock %}
