--- a/templates/sales.html
+++ b/templates/sales.html
@@ -36,22 +36,26 @@ th, td {
 
     <h1>This is the sales page</h1>
      <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-     <table style="width:100%">
+     <table id="myTable" style="width:100%">
          <tr>
              <th>Order</th>
              <th>Customer</th>
              <th>Sales Channel</th>
              <th>Reference Order</th>
          </tr>
+        {% set count = 1 %}
          {% for order in sales %}
+
             <tr>
                 <td>{{order[0]}}</td>
                 <td>{{order[1]}}</td>
                 <td>{{order[2]}}</td>
                 <td>{{order[3]}}</td>
-                <td>{{order[4]}}</td>
+                <td>{{count}}</td>
+                {% set count = count + 1 %}
+               	
                 <td><div class="dropdown">
-                  <button onclick="edit_product()" class="dropbtn">Products</button>
+                  <button onclick="Show_products({{count}}, '{{ order[1] }}', {{ order[4] }})" class="dropbtn">Products</button>
                   <!--<div id="myDropdown" class="dropdown-content">
                     <a href="#edit">Edit</a>
                     <a href="#delete">Delete</a>
@@ -59,7 +63,44 @@ th, td {
                   </div>-->
               </div></td>
             </tr>
-       {% endfor %}}
+            
+       {% endfor %}
+      <script>
+function Show_products(rownum, order, product) {
+	var table = document.getElementById("myTable");
+    var row = table.insertRow(rownum);
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    var cell4 = row.insertCell(3);
+    var cell5 = row.insertCell(4);
+    cell1.innerHTML = "";
+    cell2.innerHTML = "Name";
+    cell3.innerHTML = "Category";
+    cell4.innerHTML = "Reorder Point";
+    cell5.innerHTML = "Quantity";
+	var i;
+    for (i = 0; i < 3; i++){	
+    var row = table.insertRow(rownum+1);
+    var cell1 = row.insertCell(0);
+    var cell2 = row.insertCell(1);
+    var cell3 = row.insertCell(2);
+    var cell4 = row.insertCell(3);
+    var cell5 = row.insertCell(4);
+    cell1.innerHTML = "";
+    cell2.innerHTML = product[i][0];
+    cell3.innerHTML = product[i][1];
+    cell4.innerHTML = product[i][2];
+    cell5.innerHTML = product[i][4];
+
+    }
+
+}
+
+function Unshow_Products() {
+    document.getElementById("myTable").deleteRow(0);
+}
+</script>
 
      </table>
 {% endblock %}
