--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,19 +1,18 @@
-  {% extends "base.html" %}
+{% extends "base.html" %}
 
-  {% block content %}
-  <style>
+{% block content %}
+<style>
 
-  </style>
+</style>
 <div class="container-fluid">
   <h1 align="center">This is the inventory page</h1>
   <div align="right" >
-      <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@Add">
-          Add
-      </button>
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@Add">
+      Add
+    </button>
     <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-    
+
   </div>
-  
   <!--Add Button Model-->
   <div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
@@ -25,23 +24,23 @@
           </button>
         </div>
         <div class="modal-body">
-          <form>
+          <form method="ADD">
             <div class="form-row align-items-center">
               <div class="col-auto">
-                <label class="sr-only" for="inlineFormInput">SKU</label>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="SKU">
+                <label class="sr-only" for="validationSKU">SKU</label>
+                <input type="text" class="form-control mb-2" id="validationSKU" placeholder="SKU" required pattern="[0-9]{3}" maxlength="3">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="inlineFormInput">Name</label>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="Product Name">
+                <label class="sr-only" for="validationName">Name</label>
+                <input type="text" class="form-control mb-2" id="validationName" placeholder="Product Name" required pattern="[A-Za-z]+" maxlength="14">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="inlineFormInput">Reorder Point</label>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="200">
+                <label class="sr-only" for="validationRP">Reorder Point</label>
+                <input type="text" class="form-control mb-2" id="validationRP" placeholder="200" required min="1" max="8" pattern="[0-9]*">
               </div>
               <div class="col-auto">
-                <label class="sr-only" for="inlineFormInput">Quantity</label>
-                <input type="text" class="form-control mb-2" id="inlineFormInput" placeholder="500">
+                <label class="sr-only" for="validationQ">Quantity</label>
+                <input type="text" class="form-control mb-2" id="validationQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
               </div>
             </div>
           </form>
@@ -57,46 +56,46 @@
 
   <div class="container">
     <div class="table-responsive">
-        <table style="width:100%" class="table table-hover table-sm">
-            <thead>
-                <tr>
-                    <th scope="col">SKU</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Reorder Point</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Options</th>
-                </tr>
-            </thead>
-            {% for product in inventory %}
-                <tbody>
-                    <tr>
-                        <!--SKU-->
-                        <td>{{product[0]}}</td>
-                        <!--Name-->
-                        <td>{{product[1]}}</td>
-                        <!--Reorder Point-->
-                        <td>{{product[2]}}</td>
-                        <!--Quantity-->
-                        <td>{{product[3]}}</td>
-                        <td>
-                          <div class="btn-group">
-                            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Action
-                            </button>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#">Reorder</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Edit</a>
-                              <a class="dropdown-item btn btn-danger" href="#">Delete</a>
-                            </div>
-                          </div>
-                        </td>
-                    </tr>
-                </tbody>
-          {% endfor %}
+      <table style="width:100%" class="table table-hover table-sm">
+        <thead>
+          <tr>
+            <th scope="col">SKU</th>
+            <th scope="col">Name</th>
+            <th scope="col">Reorder Point</th>
+            <th scope="col">Quantity</th>
+            <th scope="col">Options</th>
+          </tr>
+        </thead>
+        {% for product in inventory %}
+        <tbody>
+          <tr>
+            <!--SKU-->
+            <td>{{product[0]}}</td>
+            <!--Name-->
+            <td>{{product[1]}}</td>
+            <!--Reorder Point-->
+            <td>{{product[2]}}</td>
+            <!--Quantity-->
+            <td>{{product[3]}}</td>
+            <td>
+              <div class="btn-group">
+                <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                  Action
+                </button>
+                <div class="dropdown-menu">
+                  <a class="dropdown-item" href="#">Reorder</a>
+                  <div class="dropdown-divider"></div>
+                  <a class="dropdown-item" href="#">Edit</a>
+                  <a class="dropdown-item btn btn-danger" href="#">Delete</a>
+                </div>
+              </div>
+            </td>
+          </tr>
+        </tbody>
+        {% endfor %}
       </table>
     </div>
   </div>
 </div>
 
-  {% endblock %}
+{% endblock %}
