--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -1,9 +1,7 @@
   {% extends "base.html" %}
 
   {% block content %}
-  <style>
 
-  </style>
 <div class="container-fluid">
   <h1 align="center">This is the inventory page</h1>
   <div align="right" >
@@ -57,46 +55,38 @@
 
   <div class="container">
     <div class="table-responsive">
-        <table style="width:100%" class="table table-hover table-sm">
-            <thead>
-                <tr>
-                    <th scope="col">SKU</th>
-                    <th scope="col">Name</th>
-                    <th scope="col">Reorder Point</th>
-                    <th scope="col">Quantity</th>
-                    <th scope="col">Options</th>
-                </tr>
-            </thead>
-            {% for product in inventory %}
-                <tbody>
-                    <tr>
-                        <!--SKU-->
-                        <td>{{product[0]}}</td>
-                        <!--Name-->
-                        <td>{{product[1]}}</td>
-                        <!--Reorder Point-->
-                        <td>{{product[2]}}</td>
-                        <!--Quantity-->
-                        <td>{{product[3]}}</td>
-                        <td>
-                          <div class="btn-group">
-                            <button type="button" class="btn btn-info dropdown-toggle" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                              Action
-                            </button>
-                            <div class="dropdown-menu">
-                              <a class="dropdown-item" href="#">Reorder</a>
-                              <div class="dropdown-divider"></div>
-                              <a class="dropdown-item" href="#">Edit</a>
-                              <a class="dropdown-item btn btn-danger" href="#">Delete</a>
-                            </div>
-                          </div>
-                        </td>
-                    </tr>
-                </tbody>
-          {% endfor %}
+        <table id="inventory_table" style="width:100%" class="table table-striped table-bordered">
+            
       </table>
     </div>
   </div>
 </div>
+<script>
+  $(document).ready(function() {
+    var inventory_data = {{inventory|tojson}};
+    console.log(typeof(inventory_data))
+    $('#inventory_table').DataTable( {
+      data: inventory_data, 
+      columns: [
+        {title: "SKU"},
+        {title: "Name"},
+        {title: "Reorder Point"},
+        {title: "Quantity"},
+        {title: "Options"}
+      ],
+      "columnDefs": [ {
+            "targets": -1,
+            "data": null,
+            "defaultContent": "<button>Click!</button>"
+      } ]
 
-  {% endblock %}
+    } );
+    
+    $('#inventory_table tbody').on( 'click', 'button', function () {
+        var data = table.row( $(this).parents('tr') ).data();
+        alert( "This works!" );
+    } );
+
+  } );
+</script>
+{% endblock %}
