--- a/templates/sales.html
+++ b/templates/sales.html
@@ -1,117 +1,108 @@
 {% extends "base.html" %}
 
-{% block content %}
-<style>
-.dropbtn {
-    background-color: #4CAF50;
-    color: white;
-    padding: 16px;
-    font-size: 16px;
-    border: none;
-    cursor: pointer;
-}
+  {% block content %}
 
-.dropbtn:hover, .dropbtn:focus {
-    background-color: red;
-}
+<div class="container-fluid">
+  <h1 align="center">This is the inventory page</h1>
+  <!---<div align="right" >
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@Add">
+      Add
+    </button>
+    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
 
-table {
-    border-collapse: collapse;
-}
+  </div>-->
+  <!--Add Button Model
+  <div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
+    <div class="modal-dialog" role="document">
+      <div class="modal-content">
+        <div class="modal-header">
+          <h5 class="modal-title" id="addModal">Add new product</h5>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">&times;</span>
+          </button>
+        </div>
+        <div class="modal-body">
+          <form method="ADD">
+            <div class="form-row align-items-center">
+              <div class="col-auto">
+                <label class="sr-only" for="validationSKU">SKU</label>
+                <input type="text" class="form-control mb-2" id="validationSKU" placeholder="SKU" required pattern="[0-9]{3}" maxlength="3">
+              </div>
+              <div class="col-auto">
+                <label class="sr-only" for="validationName">Name</label>
+                <input type="text" class="form-control mb-2" id="validationName" placeholder="Product Name" required pattern="[A-Za-z]+" maxlength="14">
+              </div>
+              <div class="col-auto">
+                <label class="sr-only" for="validationRP">Reorder Point</label>
+                <input type="text" class="form-control mb-2" id="validationRP" placeholder="200" required min="1" max="8" pattern="[0-9]*">
+              </div>
+              <div class="col-auto">
+                <label class="sr-only" for="validationQ">Quantity</label>
+                <input type="text" class="form-control mb-2" id="validationQ" placeholder="500" required min="1" max="8" pattern="[0-9]*">
+              </div>
+            </div>
+          </form>
+        </div>
+        <div class="modal-footer">
+          <button type="button" class="btn btn-secondary" data-dismiss="modal">Cancel</button>
+          <button type="button" class="btn btn-primary">Submit</button>
+        </div>
+      </div>
+    </div>
+  </div>
+  End of Add Button Model-->
 
-th, td {
-    padding: 15px;
-    text-align: left;
-}
+  <div class="container">
+    <div class="table-responsive">
+        <table id="sales_table" style="width:100%" class="table table-striped table-bordered"></table>
+        
+    </div>
+  </div>
+</div>
+<script>
+  $(document).ready(function() {
+    var sales_data = {{sales|tojson}};
+    var product_data = {{sales[4]|tojson}};
+    $('#sales_table').DataTable( {
+      data: sales_data, 
+      columns: [
+        {title: "Order"},
+        {title: "Name"},
+        {title: "Channel"},
+        {title: "Reference Order"},
+        {title: "Options"}
+        
+      ],
+      "columnDefs": [ {
+            "targets": -1,
+            "data": null,
+            "defaultContent": "<button>Products</button>"
+      } ]
 
-/*tbody tr {
-    display : none;
-}
-tr.parent {
-    display : table-row;
-}
-tr.open {
-    display : table-row;
-}*/
+    } );
 
-/*.show {
-    display: block;
-}*/
+    
+    //$('#sales_table tbody').on( 'click', 'button', function () {
+      //  var data = table.row( $(this).parents('tr') ).data();
+        //alert( "This works!" );
+    //} );
 
-.products {
-    display: none;
-}
+    $('#sales_table tbody').on('click', 'td.details-control', function () {
+        var tr = $(this).closest('tr');
+        var row = table.row( tr );
+ 
+        if ( row.child.isShown() ) {
+            // This row is already open - close it
+            row.child.hide();
+            tr.removeClass('shown');
+        }
+        else {
+            // Open this row
+            row.child( format(row.data()) ).show();
+            tr.addClass('shown');
+        }
+    } );
 
-
-</style>
-
-    <h1 align="center">This is the sales page</h1>
-     <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-     <table id="myTable" style="width:100%" class="table table-hover table-sm">
-         <tr>
-             <th>Order</th>
-             <th>Customer</th>
-             <th>Sales Channel</th>
-             <th>Reference Order</th>
-             <th>Options</th>
-         </tr>
-         
-                  
-         {% for order in sales %}
-             
-            <tr class="parent">
-                <!--Order #-->
-                <td>{{order[0]}}</td>
-                <!--Customer-->
-                <td>{{order[1]}}</td>
-                <!--Sales Channel-->
-                <td>{{order[2]}}</td>
-                <!--Reference Order-->
-                <td>{{order[3]}}</td>
-                 <td><div class="dropdown">
-                  <button onclick="Show_products()" class="dropbtn">Products</button>
-                  <!--<div id="myDropdown" class="dropdown-content">
-                    <a href="#edit">Edit</a>
-                    <a href="#delete">Delete</a>
-                    
-                  </div>-->
-              </div></td>
-              </tr>
-               
-                 <!--<tbody style="display:none">-->
-                 
-
-
-                 {% for product in order[4] %}
-                  <tr class="products" id="products">
-                  <td>{{product[0]}}</td>
-                  <td>{{product[1]}}</td>
-                  <td>{{product[2]}}</td>
-                  <td>{{product[4]}}</td>
-                  
-                </tr>
-                {% endfor %}
-                <!--</tbody>-->
-
-            
-       {% endfor %}
-      <script>
-
-
-$("#products").on("click","a",function(e) {
-    e.preventDefault();
-    $(this).closest("tr").nextUntil(".parent").toggleClass("open");
-});
-
-function Show_products() {
-  document.getElementById("myDiv").style.display = "table-row";
-  //document.getElementsByClassName("products").style.display = ""
-}
-
-function Unshow_Products() {
-    document.getElementById("myTable").deleteRow(0);
-}
+  } );
 </script>
-
-     </table>
 {% endblock %}
