--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -71,21 +71,22 @@
 <script>
   function format ( d ) {
     // `d` is the original data object for the row
-    var inventory_data = {{inventory|tojson}};
-    return '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">'+
-        '<tr>'+
-            '<td>Full name:</td>'+
-            '<td>' + "something" + '</td>'+
-        '</tr>'+
-        '<tr>'+
-            '<td>Extension number:</td>'+
-            '<td>' + "something" + '</td>'+
-        '</tr>'+
-        '<tr>'+
-            '<td>Extra info:</td>'+
-            '<td>And any further details here (images etc)...</td>'+
-        '</tr>'+
-    '</table>';
+    var table_str = '<table cellpadding="5" cellspacing="0" border="0" style="padding-left:50px;">';
+    {% for batch in get_batches_with(4326) %}
+      {% if check_expiration_date(batch.batch_expiration) == True  %}
+        table_str += '<tr class="bg-warning">';
+      {% else %}
+        table_str += '<tr>';
+      {% endif %}
+      table_str += 
+                        '<td>' + '{{batch.batchID}}' + '</td>'+
+                        //'<td>' + '{{batch.producer}}' + '</td>'+
+                        '<td>' + '{{batch.batch_quantity}}' + '</td>'+
+                        '<td>' + '{{batch.batch_expiration}}' + '</td>'+
+                    '</tr>'; 
+    {% endfor %}
+    table_str += "</table>";
+    return table_str;
   }
 
   $(document).ready(function() {
@@ -110,12 +111,24 @@
           "data": 1
         },
         {
-          title: "Reorder Point",
+          title: "Category",
           "data": 2
         },
         {
-          title: "Quantity",
+          title: "Price",
           "data": 3
+        },
+        {
+          title: "Reorder Point",
+          "data": 4
+        },
+        {
+          title: "Quantity",
+          "data": 5
+        },
+        {
+          title: "Storage Location",
+          "data": 6
         },
         {
             "targets": -1,
