logout button removed

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -11,11 +11,7 @@
   }
 </style>
 <div class="container-fluid">
-  <h1 align="center">This is the inventory page</h1>
-  <div align="right" >
-    <a href="{{ url_for('user_auth.logout') }}">Logout</a>
-
-  </div>
+  <h1 align="center">Inventory Page</h1>
   <!--Add Button Model-->
   <div class="modal fade" id='addModal' tabindex="1" role="dialog" aria-labelledby="addModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
