Transaction table fills entire page now

--- a/templates/transaction.html
+++ b/templates/transaction.html
@@ -14,7 +14,7 @@ tr.shown td.details-control {
 
 <div class="container-fluid">
     <h1 align="center">{{ title }}</h1>
-    <div class="container">
+    <div class="container-fluid">
         <div class="table-responsive">
             <table id="transaction_table" style="width:100%" class="table table-striped table-bordered"></table>
         </div>
