add batch button added to each product row

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -98,7 +98,7 @@
   </div>
   <!-- end of popup edit modal -->
 
-  <div class="container">
+  <div class="container-fluid">
     <div align="left">
       <button style="margin: 8px;" type="button" class="btn btn-primary" data-toggle="modal" data-target="#addModal" data-whatever="@Add">
         Add Product
@@ -218,8 +218,9 @@
             "targets": -1,
             title: "Options",
             "data": null,
-            "defaultContent": '<button style="margin-right:10px" type="button" name="editButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editModal">Edit</button>'
-            + '<button type="button" name="deleteIButton" class="btn btn-danger btn-sm" >Delete</button>'
+            "defaultContent": '<button style="margin-right:8px" type="button" name="editButton" class="btn btn-primary btn-sm" data-toggle="modal" data-target="#editModal">Edit</button>'
+            + '<button style="margin-right:8px" type="button" name="deleteIButton" class="btn btn-danger btn-sm" >Delete</button>'
+            + '<button type="button" name="#" class="btn bg-success btn-sm text-white" >Add Batch</button>'
         }
       ]
 
