error checking and expiration date view changed

--- a/templates/inventory.html
+++ b/templates/inventory.html
@@ -122,6 +122,9 @@
                 <label for="addQ">Quantity</label>
                 <input type="text" name="Quantity" class="form-control mb-2" placeholder="500" required min="1" max="8" pattern="[0-9]*">
               </div>
+            </div>
+            <h5>Expiration Date</h5>
+            <div class="form-row align-items-center">
               <div class="col-md-2">
                 <label for="expireYear">Year</label>
                 <input type="text" style="width:65px" name="Year" class="form-control mb-2" id="expireYear" placeholder="2018" required min="4" max="4" pattern="[0-9]{4}">
